--- a/Aula 2/inicial.ipynb
+++ b/Aula 2/inicial.ipynb
@@ -20,12 +20,128 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importando base de dados\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Passando os dados para uma variavel de nome \"tabela\"\n",
+    "tabela = pd.read_csv(\"cancelamentos_sample.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "1.0    28394\n",
+       "0.0    21606\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "1.0    0.56788\n",
+       "0.0    0.43212\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "1.0    56.8%\n",
+       "0.0    43.2%\n",
+       "Name: proportion, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Apresenta quantas pessoas cancelaram ou não \n",
+    "# (conta os valores de uma coluna específica)\n",
+    "display(tabela[\"cancelou\"].value_counts()) \n",
+    "\n",
+    "# Apresenta em percentual\n",
+    "display(tabela[\"cancelou\"].value_counts(normalize=True))\n",
+    "\n",
+    "# Percentual formatado\n",
+    "display(tabela[\"cancelou\"].value_counts(normalize=True).map(\"{:.1%}\".format))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method BaseFigure.show of Figure({\n",
+       "    'data': [{'bingroup': 'x',\n",
+       "              'hovertemplate': 'cancelou=0.0<br>idade=%{x}<br>count=%{y}<extra></extra>',\n",
+       "              'legendgroup': '0.0',\n",
+       "              'marker': {'color': '#636efa', 'pattern': {'shape': ''}},\n",
+       "              'name': '0.0',\n",
+       "              'orientation': 'v',\n",
+       "              'showlegend': True,\n",
+       "              'type': 'histogram',\n",
+       "              'x': {'bdata': ('AAAAAAAAN0AAAAAAAAA+QAAAAAAAAD' ... 'AAAAAAOEAAAAAAAIBCQAAAAAAAAERA'),\n",
+       "                    'dtype': 'f8'},\n",
+       "              'xaxis': 'x',\n",
+       "              'yaxis': 'y'},\n",
+       "             {'bingroup': 'x',\n",
+       "              'hovertemplate': 'cancelou=1.0<br>idade=%{x}<br>count=%{y}<extra></extra>',\n",
+       "              'legendgroup': '1.0',\n",
+       "              'marker': {'color': '#EF553B', 'pattern': {'shape': ''}},\n",
+       "              'name': '1.0',\n",
+       "              'orientation': 'v',\n",
+       "              'showlegend': True,\n",
+       "              'type': 'histogram',\n",
+       "              'x': {'bdata': ('AAAAAACASEAAAAAAAAA6QAAAAAAAAD' ... 'AAAEJAAAAAAACAS0AAAAAAAABQQA=='),\n",
+       "                    'dtype': 'f8'},\n",
+       "              'xaxis': 'x',\n",
+       "              'yaxis': 'y'}],\n",
+       "    'layout': {'barmode': 'relative',\n",
+       "               'legend': {'title': {'text': 'cancelou'}, 'tracegroupgap': 0},\n",
+       "               'margin': {'t': 60},\n",
+       "               'template': '...',\n",
+       "               'xaxis': {'anchor': 'y', 'domain': [0.0, 1.0], 'title': {'text': 'idade'}},\n",
+       "               'yaxis': {'anchor': 'x', 'domain': [0.0, 1.0], 'title': {'text': 'count'}}}\n",
+       "})>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#plotly\n",
+    "import plotly.express as px\n",
+    "\n",
+    "for coluno in tabela.columns:\n",
+    "    grafico = px.histogram(tabela, x=\"idade\", color=\"cancelou\")\n",
+    "    grafico.show"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
