--- a/Aula 2/inicial.ipynb
+++ b/Aula 2/inicial.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "# Importando base de dados\n",
+    "# kaggle - base de dados\n",
     "import pandas as pd\n",
     "\n",
     "# Passando os dados para uma variavel de nome \"tabela\"\n",
@@ -136,6 +137,37 @@
     "for coluno in tabela.columns:\n",
     "    grafico = px.histogram(tabela, x=\"idade\", color=\"cancelou\")\n",
     "    grafico.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cancelou\n",
+       "0.0    0.730378\n",
+       "1.0    0.269622\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Criar um alerta quando um cliente ligar pela 3ª vez pro callcenter\n",
+    "tabela = tabela[tabela[\"ligacoes_callcenter\"]<=4]\n",
+    "\n",
+    "display(tabela[\"cancelou\"].value_counts(normalize=True))\n",
+    "\n",
+    "# Ligar um alerta pro time de cobrança qnd o cliente bater 10 dias de atraso\n",
+    "tabela = tabela[tabela[\"dias_atraso\"]<=20]\n",
+    "\n",
+    "# Olhar a minha base excluindo os contratos mensais\n",
+    "tabela = tabela[tabela[\"duracao_contrato\"]!=\"Monthly\"]"
    ]
   }
  ],
